<resources>
    <string name="app_name">W3W</string>

    <!--SPLASH ACTIVITY-->
    <string name="join">회원가입</string>
    <string name="login">로그인</string>
    
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="pwd">패스워드</string>
    <string name="email">이메일주소</string>
    <string name="send">전송</string>
    <string name="join_email">기재된 이메일주소로 인증번호가 전송됩니다</string>
    <string name="join_auth">인증번호 입력&#160;&#160;&#160;&#160;&#160;</string>
    <string name="join_birth">생년월일&#160;&#160;&#160;&#160;ex)19980413</string>
    <string name="join_already">이미 회원이신가요?</string>

    <string name="autologin">자동로그인</string>
    <string name="saveid">아이디저장</string>

    <!--BOTTOM TAB-->
    <string name="tab_resume">내 이력서 관리</string>
    <string name="tab_smartmatch">스마트매치</string>
    <string name="tab_home">HOME</string>
    <string name="tab_jobgroup">직군별정보</string>
    <string name="tab_regiongroup">지역별정보</string>


    <string name="inputPlz">입력해주세요</string>



    <string name="enrolid">등록아이디</string>
    <string name="age">나이</string>
    <string name="birth">생년월일</string>
    <string name="wantjob">희망직종</string>
    <string name="specialnote">특기사항</string>
    <string name="certificate">자격증</string>
    <string name="education">최종학력</string>
    <string name="address">거주지역</string>
    <string name="etccareer">기타 경력사항</string>
    <string name="phone">연락처</string>

    <string name="quitApp">뒤로가기 버튼을 한번 더 누르면 종료합니다</string>

    <string name="rationaleMessage">사용자 프로필 사진을 변경하려면\n갤러리와 카메라 접근권한이 필요합니다</string>
    <string name="deniedMessage">휴대폰의 [설정] -> [권한] 메뉴에서 변경할 수 있습니다</string>
    <string name="gotoSettingBottom">설정</string>

    <string name="cheolgang">철강</string>
    <string name="jeongi">전기</string>
    <string name="jeonja">전자</string>
    <string name="saengsan">생산</string>
    <string name="somyou">섬유</string>
    <string name="whahak">화학</string>
    <string name="euiryu">의류</string>
    <string name="euiyak">의료/의약</string>
    <string name="gaebal">연구/개발</string>
    <string name="gigye">기계</string>
    <string name ="it">정보처리</string>

    <string name="gyeongi">서울 / 경기</string>
    <string name="gangwon">강원도</string>
    <string name="chungbook">충청북도</string>
    <string name="chungnam">충청남도</string>
    <string name="kyeongbook">경상북도</string>
    <string name="kyeongnam">경상남도</string>
    <string name="jeonbook">전라북도</string>
    <string name="jeonnam">전라남도</string>

    <string name="gomatching">나와 맞는 기업 매칭하기</string>
    <string name="showr_resume">등록된 이력서보기</string>
    <string name="oops">이런! \n\n이력서는 작성하셨나요?</string>

    <string name="hint_address">ex) 서울시 구로구</string>
    <string name="hint_career">경력사항을 기술해주세요</string>
    <string name="hint_teok">특기사항을 기술해주세요</string>

    <string name="giupinfo">기업정보</string>
    <string name="chaeyonginfo">채용정보</string>
    <string name="yeonbonginfo">연봉정보</string>

    <string name="notInterested">notInterest</string>
    <string name="interested">interest</string>

    <string name="plzinput">정보없음</string>


    <string name="wrongEmail">&#160;올바른 이메일 형식이 아닙니다</string>
    <string name="wrongPwd">&#160;8 ~20 자의 문자만 사용 가능합니다 </string>
    <string name="wrongPwdTwo">&#160;아이디 혹은 비밀번호가 일치하지 않습니다</string>

    <string name="matching">매칭중입니다 · · · .</string>

    <string name="magam">마감일</string>
    <string name="jiwon">지원방법</string>
    <string name="eopmu">담당업무</string>
    <string name="jiwonJakuk">지원자격</string>
    <string name="jeongong">전공</string>
    <string name="whygok">어학능력</string>
    <string name="yeok">역종구분</string>
    <string name="yowon">요원구분</string>

    <string name="website">웹사이트</string>
    <string name="bonsa">근무지역</string>
    <string name="daepyoNm">대표전화</string>
    <string name="eopjong">업종</string>
    <string name="damdangja">담당자</string>
    <string name="damdangjaNm">담당자 연락처</string>

    <string name="yeonbong">연봉</string>
    <string name="bokri">복리후생</string>


    <string-array name="school">
        <item>초등학교</item>
        <item>중학교</item>
        <item>고등학교</item>
        <item>대학(2,3년제)</item>
        <item>대학(4년제)</item>
    </string-array>

    <string-array name="schoolState">
        <item>재학</item>
        <item>졸업</item>
        <item>중퇴</item>
        <item>휴학</item>
    </string-array>

    <string-array name="month">
        <item>01월</item>
        <item>02월</item>
        <item>03월</item>
        <item>04월</item>
        <item>05월</item>
        <item>06월</item>
        <item>07월</item>
        <item>08월</item>
        <item>09월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <string name="select">select</string>
    <string name="nonselect">nonselect</string>



</resources>
