<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="regiongroup"
            type="me.happy.win3win.menu.RegionGroupFragment" />
    </data>

    <me.happy.win3win.Custom.NestedCoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/navy_a"
                    android:paddingBottom="@dimen/basic_margin"
                    app:layout_collapseMode="pin">

                    <!--첫쨰줄-->
                    <TextView
                        android:id="@+id/region_gyeongi"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map01"
                        android:text="@string/gyeongi"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/region_gangwon"

                        />

                    <TextView
                        android:id="@+id/region_gangwon"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map02"
                        android:text="@string/gangwon"
                        app:layout_constraintBottom_toBottomOf="@+id/region_gyeongi"
                        app:layout_constraintLeft_toRightOf="@+id/region_gyeongi"
                        app:layout_constraintRight_toLeftOf="@+id/region_chungbook" />

                    <TextView
                        android:id="@+id/region_chungbook"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map03"
                        android:text="@string/chungbook"
                        app:layout_constraintBottom_toBottomOf="@+id/region_gyeongi"
                        app:layout_constraintLeft_toRightOf="@+id/region_gangwon"
                        app:layout_constraintRight_toLeftOf="@+id/region_chungnam"
                        app:layout_constraintVertical_chainStyle="spread" />


                    <TextView
                        android:id="@+id/region_chungnam"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map04"
                        android:text="@string/chungnam"
                        app:layout_constraintBottom_toBottomOf="@+id/region_gyeongi"
                        app:layout_constraintLeft_toRightOf="@+id/region_chungbook"
                        app:layout_constraintRight_toRightOf="parent" />


                    <!--둘째줄-->
                    <TextView
                        android:id="@+id/region_kyeongbook"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map05"
                        android:text="@string/kyeongbook"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/region_kyeongnam"
                        app:layout_constraintTop_toBottomOf="@+id/region_gyeongi" />

                    <TextView
                        android:id="@+id/region_kyeongnam"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map06"
                        android:text="@string/kyeongnam"
                        app:layout_constraintBaseline_toBaselineOf="@+id/region_kyeongbook"
                        app:layout_constraintLeft_toRightOf="@+id/region_kyeongbook"
                        app:layout_constraintRight_toLeftOf="@+id/region_jeonbook"
                        app:layout_constraintTop_toBottomOf="@+id/region_gangwon" />

                    <TextView
                        android:id="@+id/region_jeonbook"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map07"
                        android:text="@string/jeonbook"
                        app:layout_constraintBaseline_toBaselineOf="@+id/region_kyeongbook"
                        app:layout_constraintLeft_toRightOf="@+id/region_kyeongnam"
                        app:layout_constraintRight_toLeftOf="@+id/region_jeonnam"
                        app:layout_constraintTop_toBottomOf="@+id/region_chungbook" />

                    <TextView
                        android:id="@+id/region_jeonnam"
                        style="@style/JobBtn"
                        android:drawableTop="@drawable/map08"
                        android:text="@string/jeonnam"
                        app:layout_constraintBaseline_toBaselineOf="@+id/region_kyeongbook"
                        app:layout_constraintLeft_toRightOf="@+id/region_jeonbook"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/region_chungnam" />


                </android.support.constraint.ConstraintLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_region"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </me.happy.win3win.Custom.NestedCoordinatorLayout>
</layout>