<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="xactivity"
            type="kr.happy.myarmy.XpracActivity" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/graybacground"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="12dp"
            android:paddingTop="10dp">


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="이름"
                android:textColor="@color/fora"
                android:textSize="14dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/info_name"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toTopOf="parent" />

            <kr.happy.myarmy.Custom.LPEdittext
                android:id="@+id/info_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:text="이지윤"
                android:textColor="@color/nineb"
                android:textSize="14dp"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintLeft_toRightOf="@+id/name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--생년월일-->
            <TextView
                android:id="@+id/birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:text="생년월일"
                android:textColor="@color/fora"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <Spinner
                android:id="@+id/info_birthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toTopOf="@+id/birth" />

            <Spinner
                android:id="@+id/info_birthMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownSelector="@drawable/infobackground"
                android:popupBackground="@drawable/infobackground"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toRightOf="@+id/info_birthYear"
                app:layout_constraintTop_toTopOf="@+id/birth" />


            <Spinner
                android:id="@+id/info_birthDOM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toRightOf="@+id/info_birthMonth"
                app:layout_constraintTop_toTopOf="@+id/birth" />


            <!--희망직종-->
            <TextView
                android:id="@+id/wantJob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:text="희망직종"
                android:textColor="@color/fora"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <CheckBox
                android:id="@+id/info_ckGigye"
                style="@style/infoCheckbox"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/gigye"
                app:layout_constraintLeft_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toTopOf="@+id/wantJob" />

            <CheckBox
                android:id="@+id/info_ckJeonja"
                style="@style/infoCheckbox"
                android:text="@string/jeonja"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@+id/info_ckGigye"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wantJob" />

            <CheckBox
                android:id="@+id/info_ckJeongi"
                style="@style/infoCheckbox"
                android:text="@string/jeongi"

                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toRightOf="@+id/info_ckJeonja"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wantJob" />

            <!--두번쨰줄-->
            <CheckBox
                android:id="@+id/info_ckWhahak"
                style="@style/infoCheckbox"
                android:layout_marginTop="3dp"
                android:text="@string/whahak"
                app:layout_constraintLeft_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toBottomOf="@+id/info_ckGigye" />

            <CheckBox
                android:id="@+id/info_ckCheolgang"
                style="@style/infoCheckbox"
                android:text="@string/cheolgang"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toRightOf="@+id/info_ckWhahak"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_ckWhahak" />

            <CheckBox
                android:id="@+id/info_ckGaebal"
                style="@style/infoCheckbox"

                android:text="@string/gaebal"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toRightOf="@+id/info_ckCheolgang"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_ckWhahak" />


            <!--세번째줄-->
            <CheckBox
                android:id="@+id/info_ckIT"
                style="@style/infoCheckbox"
                android:layout_marginTop="3dp"
                android:text="IT"
                app:layout_constraintLeft_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toBottomOf="@+id/info_ckWhahak" />

            <CheckBox
                android:id="@+id/info_ckSomyou"
                style="@style/infoCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/somyou"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/info_ckCheolgang"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_ckIT" />


            <CheckBox
                android:id="@+id/info_ckSaengsan"
                style="@style/infoCheckbox"

                android:text="@string/saengsan"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toRightOf="@+id/info_ckSomyou"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_ckIT" />

            <!--네번째줄-->
            <CheckBox
                android:id="@+id/info_ckEuiyak"
                style="@style/infoCheckbox"
                android:layout_marginTop="3dp"
                android:background="@null"
                android:text="@string/euiyak"

                app:layout_constraintLeft_toLeftOf="@+id/info_name"
                app:layout_constraintTop_toBottomOf="@+id/info_ckIT" />


            <CheckBox
                android:id="@+id/info_ckEuiryu"
                style="@style/infoCheckbox"
                android:text="@string/euiryu"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/info_ckSaengsan"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_ckEuiyak" />


            <!--최종학력-->
            <TextView
                android:id="@+id/hakreok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:text="@string/education"
                android:textColor="@color/fora"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</layout>