<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="activity"
            type="kr.happy.myarmy.LoginActivity"/>
    </data>

<android.support.constraint.ConstraintLayout
    tools:context="kr.happy.myarmy.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/navy_a">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/constraintCenter"
        android:src="@drawable/logo_transparent_small"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.1"
      />

    <TextView
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/constraintCenter"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.3"
        android:text="Log In"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <kr.happy.myarmy.Custom.LPEdittext
        android:id="@+id/login_id"
        style="@style/login_signupEdittext"
        android:hint="@string/id"
        android:inputType="text"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintLeft_toLeftOf="@+id/login_logo"
        />

    <kr.happy.myarmy.Custom.LPEdittext
        android:id="@+id/login_pwd"
        style="@style/login_signupEdittext"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/login_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_id"
        app:layout_constraintVertical_bias="0.58"
 />

    <Button
        android:id="@+id/signIn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/firstScreen"
        android:text="@string/login"
        app:layout_constraintVertical_bias="0.87"
        android:background="@drawable/btnshape_orange"
      />



</android.support.constraint.ConstraintLayout>
</layout>